WIP0001
Se actualiza parámetros para cors.